--- a/modules/module4/makefile
+++ b/modules/module4/makefile
@@ -1,6 +1,3 @@
-PrintName: src/PrintName.s
-	gcc src/PrintName.s -g -c -o build/PrintName.o
-	gcc build/PrintName.o -g -o PrintName
-PrintInt: src/PrintInt.s
-	gcc src/PrintInt.s -g -c -o build/PrintInt.o
-	gcc build/PrintInt.o -g -o PrintInt
+PrintFloating: src/PrintFloating.s
+	gcc src/PrintFloating.s -g -c -o build/PrintFloating.o
+	gcc build/PrintFloating.o -g -o PrintFloating
